# SkyNDK

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/sky/skyndk/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  AndroidLog.cpp  md5.cpp  md5.h  native-lib.cpp  native-md5.cpp  native-md5.h
app/src/main/java/sky/skyndk/: IMainBiz.java  MD5Activity.java  MD5Biz.java  MainActivity.java  MainBiz.java  SkyNDKApplication.java
app/src/main/jni/: Main.c  sky_skyndk_MainActivity.h
app/src/main/res/layout/: activity_main.xml  activity_md5.xml  activity_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sky/skyndk/: ExampleUnitTest.java
